# agent-tool-shared-cli

./: .gitignore  AGENTS.md  BLUEPRINT.md  BUILDING-THE-NEXT-CLI.md  LICENSE  README.md  SIMILARITY_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/agentcli/: __init__.py  appspec.py  credentials.py  errors.py  output.py  report.py
tests/: test_appspec.py  test_contract.py  test_credentials.py  test_output_render.py  test_report.py
