[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tool-shared-cli"
description = "Shared chassis for agent-ready CLIs: the exit-code contract, JSON/table/markdown/CSV output with field projection, and keyring-backed credentials."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zierhut IT" }, { name = "Alexander Zierhut" }]
dynamic = ["version"]
keywords = [
    "cli", "command-line", "ai-agent", "llm", "automation",
    "json-output", "keyring", "exit-codes", "agent-ready",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "keyring>=25",
    "rich>=13",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-timeout>=2.3",
]

[project.urls]
Homepage = "https://github.com/alexander-zierhut/agent-tool-shared-cli"
Repository = "https://github.com/alexander-zierhut/agent-tool-shared-cli"
Issues = "https://github.com/alexander-zierhut/agent-tool-shared-cli/issues"
Changelog = "https://github.com/alexander-zierhut/agent-tool-shared-cli/releases"

# No [project.scripts]: this is a library, not a command.

[tool.setuptools.packages.find]
where = ["src"]

# Single source of truth for the version — the scar opcli carries (it duplicates
# the number in pyproject.toml AND __init__.py, so a bump can ship a wheel that
# reports the wrong version in its User-Agent and in the skill it writes).
[tool.setuptools.dynamic]
version = { attr = "agentcli.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
timeout = 60
